Prevents flickering when loading pokemon component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -140,15 +140,15 @@ $main_theme_color: #EF5350;
     background-color: #E53935;
     color: white;
     margin-top: 10px;
-    font-size: 11px;
+    font-size: 14px;
     border-radius: 5px;
-    max-width: 400px;
+    max-width: 500px;
     margin-left: auto;
     margin-right: auto;
     padding: 5px;
-    padding-bottom: 8px;
     @media(max-width: 768px) {
       max-width: 300px;
+      font-size: 12px;
     }
 
     button {
